--- a/package.json
+++ b/package.json
@@ -243,6 +243,8 @@
 		"typescript": "^4.9.5"
 	},
 	"dependencies": {
+		"@azure/openai": "^1.0.0-beta.9",
+		"dotenv": "^16.3.1",
 		"openai": "^3.2.1"
 	}
 }
